# sakhi

./: .editorconfig  .env.local.example  .gitignore  Build_20_MetaReflection_Audit.md  Build_41_Deep_Context_Recall.md  Build_43_Focus_Flow_Mode.md  Build_44_Relationship_Model.md  Build_61_Rhythm_Soul.md  Build_71_Intent_Evolution.md  Build_72_Emotion_Loop.md  Build_73_Daily_Alignment.md  Build_74_Coherence_Report.md  Build_77_Inner_Dialogue.md  Build_78_Identity_Drift.md  Build_79_Inner_Conflict.md  Build_80_Coherence.md  Build_81_Forecast.md  Build_82_Tone.md  Build_83_Preventive_Nudge.md  Dockerfile  Makefile  README.md  docker-compose.local.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.toml  sakhi_investor_demo_landing_screen.html
apps/api/: .dockerignore  Dockerfile  main.py  package.json  pyproject.toml
apps/api/migrations/: V035__system_events.sql
apps/api/routes/: __init__.py  presence.py  tone.py
config/: config.yaml
docs/: 00_Canonical_Index.md  BUILD_01_MOMENT_MODEL.md  BUILD_02_EVIDENCE_PACK.md   BUILD_03_DELIBERATION_SCAFFOLD.md  BUILD_04_REFLECTION_TRACE.md  Evaluating Sakhi’s Conversational Architecture.docx  INNER_MIRROR_COMPLETION_PLAN.md  INVESTOR-LANGUAGE.md  INVESTOR_DEMO.md  Reflection-Contract.md  clarity_context_pipeline.md  codex_build35_dev_console.md  conversation_state_rollout.md  evaluating_sakhi.txt  facet-extractor.md  sakhi_investor_demo_journal_timeline.html  sakhi_investor_demo_landing_screen.html  sakhi_investor_demo_memory.html  sakhi_investor_demo_model.html  tone-policy.md  (+1 more)
(+875 files in other folders)
