[tool.poetry]
name = "sakhi-api"
version = "0.1.0"
description = "Mono-repo skeleton for the Sakhi AI companion"
authors = ["Codex <codex@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
redis = "^5.0.3"
rq = "^1.15.1"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
psycopg = { version = "^3.1.18", extras = ["binary"] }
cryptography = "^42.0.5"
httpx = "^0.27.0"
jsonschema = "^4.21.1"
numpy = "^2.3.4"
python-multipart = "^0.0.9"
prometheus-client = "^0.20.0"
starlette-exporter = "^0.15.1"
pandas = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
black = "^24.3.0"
ruff = "^0.4.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
